--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ a:hover {
 }
 
 #ds-card-list {
-  padding: 40px 0;
+  padding: 40px 10px;
 }
 
 .ds-card {
@@ -89,11 +89,11 @@ a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 220px;
+  height: 190px;
 }
 
 .ds-card-description h3 {
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   font-size: 14px;
   font-weight: 700;
   text-align: center;
